Nouvelle version Mobile. Bug de taille.

--- a/style.css
+++ b/style.css
@@ -133,40 +133,14 @@ h1{
 }
 
 
-/* Version Mobile TEST 376px */
-@media only screen and (max-width: 376px) {
-  .card-container{
-     display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-
-  .main-card, .second-card{
-    width: 90%;
-    height: 65%;
-    padding: 15px;
-    
-  }
-
-  .main-card{
-    border-radius: 10px 10px 0px 0px;
-  }
-
-  .second-card{
-    border-radius: 0px 0px 10px 10px;
-  }
-
-  .container{
-    gap: 5px;
-  }
-
-  #villeInput{
-    font-size: 1.2em;
-  }
-}
 
 /* Version Mobile TEST 426px */
 @media only screen and (max-width: 426px){
+  .container{
+    height: 100%;
+  }
+
+
   .card-container{
     display: flex;
    flex-direction: column;
@@ -193,6 +167,43 @@ h1{
  }
 
  #villeInput{
-   font-size: 1.2em;
+   font-size: 1.3em;
  }
 }
+
+
+
+
+/* Version Mobile TEST 376px */
+@media only screen and (max-width: 376px) {
+
+  .container{
+    height: 100%;
+  }
+  .card-container{
+     display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .main-card, .second-card{
+    width: 90%;
+    height: 65%;
+    padding: 15px;
+    
+  }
+
+  .main-card{
+    border-radius: 10px 10px 0px 0px;
+  }
+
+  .second-card{
+    border-radius: 0px 0px 10px 10px;
+  }
+
+  .container{
+    gap: 5px;
+  }
+
+}
+
